news and categories APIs added
