# routes/admin/admin-newsRoutes.js
@@ -9,6 +9,7 @@ const newsCtrl = require('../../controllers/http/newsController.js');
 // @desc     Add a main category for the news.
 // @access   Private
 router.post('/add-main-category', 
+    adminAuthCtrl.tokenVerification,
 	newsCtrl.addMainCategory, 
 	(req, res) => {
 	res.status(200);
@@ -21,6 +22,7 @@ router.post('/add-main-category',
 // @desc     Add a sub category for the news.
 // @access   Private
 router.post('/add-sub-category', 
+    adminAuthCtrl.tokenVerification,
 	newsCtrl.addSubCategory, 
 	(req, res) => {
 	res.status(200);
@@ -32,7 +34,8 @@ router.post('/add-sub-category',
 // @route    PUT api/admin/news/rename-category
 // @desc     Rename a category for the news.
 // @access   Private
-router.put('/add-sub-category', 
+router.put('/rename-category', 
+    adminAuthCtrl.tokenVerification,
 	newsCtrl.renameCategory, 
 	(req, res) => {
 	res.status(200);
@@ -41,10 +44,25 @@ router.put('/add-sub-category',
     })
 });
 
+// @route    PUT api/admin/news/delete-category
+// @desc     delete a category for the news.
+// @access   Private
+router.delete('/delete-category/:categoryID', 
+    adminAuthCtrl.tokenVerification,
+    newsCtrl.deleteCategory, 
+    (req, res) => {
+    res.status(200);
+    res.send({
+        "message": "Category delete Successful",
+        "subTree": req.subTree
+    })
+});
+
 // @route    GET api/admin/news/all-categories
 // @desc     Retrieve all categories of news section
 // @access   Private
-router.get('/all-categories', 
+router.get('/all-categories',
+    adminAuthCtrl.tokenVerification, 
 	newsCtrl.getAllCategories, 
 	(req, res) => {
 	res.status(200);
@@ -58,6 +76,7 @@ router.get('/all-categories',
 // @desc     Retrieve all categories of news section in tree view format
 // @access   Private
 router.get('/all-category-tree', 
+    adminAuthCtrl.tokenVerification,
 	newsCtrl.getAllCategoryTree, 
 	(req, res) => {
 	res.status(200);
@@ -68,12 +87,21 @@ router.get('/all-category-tree',
 });
 
 
-/*News APIs Begins*/
+/*News APIs Begins
+*
+*
+*
+*
+*
+*
+*
+*/
 
-// @route    POST api/admin/news/post-news
+// @route    POST api/admin/news
 // @desc     Post a news article
 // @access   Private
-router.post('/post-news', 
+router.post('/', 
+    adminAuthCtrl.tokenVerification,
     newsCtrl.uploadNewsFiles, 
     newsCtrl.newsValidation, 
     newsCtrl.postNews, 
@@ -85,10 +113,12 @@ router.post('/post-news',
     })
 });
 
-// @route    PUT api/admin/news/update-news/:newsID
+// @route    PUT api/admin/news/:newsID
 // @desc     Update a news article
 // @access   Private
-router.put('/update-news/:newsID', 
+router.put('/:newsID', 
+    adminAuthCtrl.tokenVerification,
+    newsCtrl.uploadNewsFiles, 
     newsCtrl.updateNews, 
     (req, res) => {
     res.status(200);
@@ -98,10 +128,37 @@ router.put('/update-news/:newsID',
     })
 });
 
+// @route    DELETE api/admin/news/:newsID
+// @desc     Delete a news article
+// @access   Private
+router.delete('/:newsID', 
+    adminAuthCtrl.tokenVerification,
+    newsCtrl.deleteNews, 
+    (req, res) => {
+    res.status(200);
+    res.send({
+        "message": "News Article Delete Successful",
+    })
+});
+
+// @route    DELETE api/admin/news/:categoryID
+// @desc     Delete all news of particular categoryID
+// @access   Private
+router.delete('/all-news/:categoryID', 
+    adminAuthCtrl.tokenVerification,
+    newsCtrl.deleteNewsByCategory, 
+    (req, res) => {
+    res.status(200);
+    res.send({
+        "message": "News of particular category Delete Successful",
+    })
+});
+
 // @route    PUT api/admin/news/set-thumbnail/:newsID
 // @desc     Set a thumbnal image for a news article
 // @access   Private
 router.put('/set-thumbnail/:newsID', 
+    adminAuthCtrl.tokenVerification,
     newsCtrl.setThumbnail, 
     (req, res) => {
     res.status(200);
@@ -111,29 +168,34 @@ router.put('/set-thumbnail/:newsID',
 });
 
 
-// @route    GET api/admin/news/details/:newsID
+// @route    GET api/admin/news/:newsID
 // @desc     Retrieve the details of news post.
 // @access   Private
-router.get('/details/:newsID', 
+router.get('/:newsID', 
+    adminAuthCtrl.tokenVerification,
     newsCtrl.getNewsDetail, 
     (req, res) => {
     res.status(200);
     res.send({
         "message": "News Details Retrieval Successful",
+        "newsData": req.newsData
     })
 });
 
-// @route    GET api/admin/news/all-news/:categoryID
+// @route    GET api/admin/news/:categoryID
 // @desc     Retrieve all news of particular category
 // @access   Private
-router.get('/all-news/:newsID', 
+router.get('/all-news/:categoryID', 
+    adminAuthCtrl.tokenVerification,
     newsCtrl.getNewsByCategory, 
     (req, res) => {
     res.status(200);
     res.send({
         "message": "News Retrieval of particular category Successful",
+        "news": req.news
     })
 });
+
 
 
 
